novas endpoints na documentação
